# HTTrack-Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: installation.md  usage.md
examples/: demo.py
github/ISSUE_TEMPLATE/: bug_report.md
github/workflows/: python-package.yml
scripts/: demo.sh  install.sh
src/httrack_to_template/: __init__.py  analyzer.py  cli.py  core.py  generator.py  webapp.py
tests/: test_analyzer.py
